2003-12-13  Mark Kettenis  <kettenis@gnu.org>

	* blockframe.c (inside_main_func): Reformat.  Introduce new local
	variables to prevent long lines.  Update comments to reflect
	reality.

2003-12-12  Kevin Buettner  <kevinb@redhat.com>

	From David Mosberger  <davidm@hpl.hp.com>:
	* libunwind-frame.c (unw_find_dyn_list_p): Replace most arguments
	with a single unw_dyn_info_t pointer.
	(libunwind_find_dyn_list): Likewise.
	* libunwind-frame.h: Likewise.
	* ia64-tdep.c (ia64_find_unwind_table): Switch to using
	UNW_INFO_FORMAT_REMOTE_TABLE so we can avoid having to read in the
	entire unwind-table at once.  Support for this table format has
	been added to libunwind v0.95.
	(ia64_find_proc_info_x): Adjust for remote-unwind-table changes.
	(ia64_get_dyn_info_list): Adjust for interface change for
	libunwind_find_dyn_list().

2003-12-12  Jeff Johnston  <jjohnstn@redhat.com>

	* breakpoint.c (breakpoint_enabled): New function to test whether
	breakpoint is active and enabled.
	(insert_bp_location, insert_breakpoints): Call new function to test
	for enabled breakpoint.
	(remove_breakpoint, breakpoint_here_p, breakpoint_thread_match)
	(bpstat_should_step, bpstat_have_active_hw_watchpoints)
	(disable_breakpoints_in_shlibs, hw_watchpoint_used_count)
	(disable_watchpoints_before_interactive_call_start)
	(breakpoint_re_set_one): Ditto.
	(bpstat_stop_status): Use new function and simplify test.

2003-12-11  Mark Kettenis  <kettenis@gnu.org>

	* observer.c (observer_test_first_observer)
	(observer_test_second_observer, observer_test_third_observer):
	Don't define as `static'.
	(observer_test_first_notification_function)
	(observer_test_second_notification_function)
	(observer_test_third_notification_function): Likewise.

2003-12-10  Mark Kettenis  <kettenis@gnu.org>

	* solib.h (SOLIB_UNLOADED_LIBRARY_PATHNAME): Define as "" instead
	of (0).

2003-12-11  Dhananjay Deshpande  <dhananjayd@kpitcummins.com>

	* MAINTAINERS (write after approval): Add myself.
